tests/snapshots/commands_from_ui__diff-2.snap
---
source: tests/commands_from_ui.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────↑─────────────Chats─────────────┐"
"│ ✦ Kwek kwek                                                                                                                  █ 󰍩  Kwek                       │"
"│ ℹ Command chat successful in 0 seconds                                                                                       █                               │"
"│ ℹ No changes                                                                                                                 █                               │"
"│ ℹ Command diff successful in 0 seconds                                                                                       █                               │"
"│ ℹ Command exec successful in 0 seconds                                                                                       █                               │"
"│ ℹ [1mdiff --git a/hello.txt b/hello.txt[m                                                                                  █                               │"
"│ [1mindex 5dd01c1..cc628cc 100644[m                                                                                         █                               │"
"│ [1m--- a/hello.txt[m                                                                                                       █                               │"
"│ [1m+++ b/hello.txt[m                                                                                                       █                               │"
"│ [36m@@ -1 +1 @@[m                                                                                                          █                               │"
"│ [31m-Hello, world![m                                                                                                       █                               │"
"│ \ No newline at end of file[m                                                                                               █                               │"
"│ [32m+[m[32mworld[m                                                                                                       █                               │"
"│ ℹ Command diff successful in 0 seconds                                                                                       █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █─────────Chat commands─────────┤"
"│                                                                                                                              █                               │"
"│                                                                                                                              ║ /quit                         │"
"│                                                                                                                              ║ /show_config                  │"
"│                                                                                                                              ║ /index_repository             │"
"│                                                                                                                              ║ /next_chat                    │"
"│                                                                                                                              ║ /new_chat                     │"
"│                                                                                                                              ║ /delete_chat                  │"
"│                                                                                                                              ║ /copy                         │"
"│                                                                                                                              ║ /diff                         │"
"│                                                                                                                              ║                               │"
"│                                                                                                                              ↓──────────Keybindings──────────┤"
"├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                               │"
"│  Send a message to an agent ...                                                                                              │ Page Up/Down - Scroll         │"
"│                                                                                                                              │ End - Scroll to end           │"
"│                                                                                                                              │ ^s - Send message             │"
"│                                                                                                                              │ ^x - Stop agent               │"
"│                                                                                                                              │ ^n - New chat                 │"
"│                                                                                                                              │                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴───────────────────────────────┘"
"                                                                                                                     kwaak/936da01f-9abd-4d9d-80c7-02af85c822a8 "
"                                                                                                                                                                "
