tests/snapshots/commands_from_ui__diff.snap
---
source: tests/commands_from_ui.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────↑─────────────Chats─────────────┐"
"│ ✦ Kwek kwek                                                                                                                  █ 󰍩  Kwek                       │"
"│ ℹ Command chat successful in 0 seconds                                                                                       █                               │"
"│ ℹ No changes                                                                                                                 █                               │"
"│ ℹ Command diff successful in 0 seconds                                                                                       █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █─────────Chat commands─────────┤"
"│                                                                                                                              █                               │"
"│                                                                                                                              █ /quit                         │"
"│                                                                                                                              █ /show_config                  │"
"│                                                                                                                              █ /index_repository             │"
"│                                                                                                                              █ /next_chat                    │"
"│                                                                                                                              █ /new_chat                     │"
"│                                                                                                                              █ /delete_chat                  │"
"│                                                                                                                              ║ /copy                         │"
"│                                                                                                                              ║ /diff                         │"
"│                                                                                                                              ║                               │"
"│                                                                                                                              ↓──────────Keybindings──────────┤"
"├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                               │"
"│  Send a message to an agent ...                                                                                              │ Page Up/Down - Scroll         │"
"│                                                                                                                              │ End - Scroll to end           │"
"│                                                                                                                              │ ^s - Send message             │"
"│                                                                                                                              │ ^x - Stop agent               │"
"│                                                                                                                              │ ^n - New chat                 │"
"│                                                                                                                              │                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴───────────────────────────────┘"
"                                                                                                                     kwaak/936da01f-9abd-4d9d-80c7-02af85c822a8 "
"                                                                                                                                                                "
